Add suggestion and feedback spec
